<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dip"
        android:layout_marginRight="2dip"
        android:layout_marginTop="10dip"
        android:gravity="center|center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout13"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="10dip" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/language"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_weight="9.39"
                android:editable="false"
                android:inputType="none" />
        </LinearLayout>

        <TextView
            android:clickable="true"
            android:id="@+id/dateTimePlayback"
            android:textColor="@color/textview"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableRight="@drawable/arrow"
            android:layout_marginTop="10dp"
            android:text="@string/dateTimePlayback"
            android:drawablePadding="2dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:clickable="true"
            android:id="@+id/incomingCall"
            android:textColor="@color/textview"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableRight="@drawable/arrow"
            android:text="@string/incomingCall"
            android:layout_marginTop="10dp"
            android:drawablePadding="2dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:clickable="true"
            android:id="@+id/incomingSMS"
            android:textColor="@color/textview"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableRight="@drawable/arrow"
            android:text="@string/incomingSMS"
            android:layout_marginTop="10dp"
            android:drawablePadding="2dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/border"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="230dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="5dip"
                    android:text="@string/incomingCall"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <CheckBox
                    android:id="@+id/phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="5dip"
                    android:text="@string/incomingMessage"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/incomingMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="0.46"
                    android:text="Incoming Call!" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/border"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="230dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="5dip"
                    android:text="@string/incomingSMS"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <CheckBox
                    android:id="@+id/smsReceive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp" >

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="5dip"
                    android:text="@string/incomingMessage"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/smsMessage"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:inputType="text"
                    android:text="SMS Received from" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>